--- a/Rincon/Resources/Strings/Texts.resx
+++ b/Rincon/Resources/Strings/Texts.resx
@@ -135,6 +135,9 @@
   <data name="Login" xml:space="preserve">
     <value>Iniciar sesión</value>
   </data>
+  <data name="No" xml:space="preserve">
+    <value>No</value>
+  </data>
   <data name="Password" xml:space="preserve">
     <value>Contraseña</value>
   </data>
@@ -143,6 +146,9 @@
   </data>
   <data name="RecoverPassword" xml:space="preserve">
     <value>¿Olvidaste tu contraseña?</value>
+  </data>
+  <data name="Si" xml:space="preserve">
+    <value>Yes</value>
   </data>
   <data name="SignUp" xml:space="preserve">
     <value>Regístrate</value>
